samples/_failures_safe/1761183803_23349d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a63fb3f2.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_a63fb3f2.c:172:16: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  172 |         struct GraphEdge *edge
      |                ^~~~~~~~~
./samples/SAFE/__tmp_a63fb3f2.c:172:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a63fb3f2.c:172:16: error: expected declaration or statement at end of input
